--- a/index.html
+++ b/index.html
@@ -3,23 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ajedrez con Canvas</title>
+    <title>Ajedrez By Noel</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Ajedrez para Dos Jugadores</h1>
+    <h1>Ajedrez</h1>
 
     <div id="game-info">
         <div id="player1-info" class="player-info">
             <span id="player1-name"></span>: <span id="player1-score">0</span> victorias
         </div>
-        <div id="turn-indicator">Turno de: <span id="current-player"></span></div>
         <div id="player2-info" class="player-info">
             <span id="player2-name"></span>: <span id="player2-score">0</span> victorias
         </div>
     </div>
 
-    <canvas id="chessBoard" width="400" height="400"></canvas>
+    <canvas id="chessBoard" width="400" height="400px"></canvas>
 
     <div class="controls">
         <button id="reset-game">Reiniciar Partida</button>
