--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
         </div>
     </div>
 
+    <div id="ai-controls">
+        <label>
+            <input type="checkbox" id="ai-checkbox"> Jugar contra la IA
+        </label>
+        <select id="ai-level" style="display: none;">
+            <option value="easy">Fácil</option>
+            <option value="intermediate">Intermedio</option>
+            <option value="expert">Experto</option>
+        </select>
+    </div>
+
     <canvas id="chessBoard" width="400" height="400px"></canvas>
 
     <div class="controls">
