--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div id="ai-controls">
         <label>
-            <input type="checkbox" id="ai-checkbox"> Jugar contra la IA
+            <input type="checkbox" id="ai-checkbox"> Computadora
         </label>
         <select id="ai-level" style="display: none;">
             <option value="easy">Fácil</option>
