Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div id="ai-controls">
         <label>
-            <input type="checkbox" id="ai-checkbox"> Computadora
+            <input type="checkbox" id="ai-checkbox"> PC
         </label>
         <select id="ai-level" style="display: none;">
             <option value="easy">Fácil</option>
