--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <button id="reset-scores-start">Borrar Puntuaciones</button>
         </div>
         <div id="online-setup" class="hidden">
-            <p>Tu ID de jugador es: <strong id="player-id"></strong></p>
-            <input type="text" id="opponent-id-input" placeholder="Ingresa la ID de tu oponente">
-            <button id="connect-button">Conectar</button>
+            <input type="text" id="my-name-input" placeholder="Ingresa tu nombre de jugador">
+            <input type="text" id="opponent-name-input" placeholder="Ingresa el nombre de tu oponente">
+            <button id="connect-by-name-button">Conectar y Jugar</button>
             <p id="connection-status"></p>
         </div>
     </div>
