Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="background-container"></div>
     <div id="start-screen">
         <h1>AJEDREZ LR</h1>
-        <div class="scores-summary">
+        <div class="hidden scores-summary">
             <h2>Puntuaciones (2 Jugadores)</h2>
             <p id="summary-p1">Jugador 1: 0 victorias</p>
             <p id="summary-p2">Jugador 2: 0 victorias</p>
