Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <button id="start-online-button">Jugar en Línea</button>
 
         </div>
-        <div class="controls-start">
+        <div class="controls-start hidden">
             <button id="reset-scores-start">Borrar Puntuaciones</button>
         </div>
         <div id="online-setup" class="hidden">
