Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <select id="ai-level-start">
                     <option value="easy">Fácil</option>
                     <option value="intermediate">Intermedio</option>
-                    <option value="expert">Experto</option>
+                    <option selected value="expert">Experto</option>
                 </select>
             </div>
 
