--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <option value="expert" selected>Experto</option>
                 </select>
             </div>
+
             <button id="start-2p-button" type="button">2 Jugadores (Local)</button>
             <button id="start-online-button">Jugar en Línea</button>
 
@@ -105,6 +106,27 @@
         <div class="controls">
             <button id="main-menu-button">Volver al Menú</button>
         </div>
+
+        <!-- <div id="game-area">
+             <!- Jugador Blancas (arriba) 
+            <div class="player-zone" id="white-zone">
+                <div class="player-header">
+                    <span id="white-player-name">Jugador Blancas</span>
+                </div>
+                <div class="captured-pieces" id="white-captured"></div>
+            </div>
+
+            <!- Tablero 
+            <canvas id="chessBoard" width="400" height="400"></canvas>
+
+            <!- Jugador Negras (abajo) 
+            <div class="player-zone" id="black-zone">
+                <div class="player-header">
+                    <span id="black-player-name">Jugador Negras</span>
+                </div>
+                <div class="captured-pieces" id="black-captured"></div>
+            </div>
+        </div> -->
     </div>
 
     <div id="game-over-modal" class="hidden">
