--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ajedrez By Noel</title>
     <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
+    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -153,6 +154,18 @@
         // Inicializa Firebase
         firebase.initializeApp(firebaseConfig);
     </script>
+
+<script>
+    if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+            navigator.serviceWorker.register('/sw.js').then(registration => {
+                console.log('Service Worker registrado con éxito:', registration.scope);
+            }).catch(error => {
+                console.log('Error en el registro del Service Worker:', error);
+            });
+        });
+    }
+</script>
 
     <script src="script.js"></script>
 </body>
